syntax = "proto3";
option java_multiple_files = true;
package com.roma.distr.grpc;

message PrepareRequestGrpc {
  int32 id = 1;
  int32 round = 2;
}

message PrepareResponseGrpc {
  int32 id = 1;
  int32 round = 2;
  bool isAccepted = 3;
}

service PrepareService {
  rpc sendPrepare(PrepareRequestGrpc) returns (PrepareResponseGrpc);
}